chore(logs): session end - batch 9 (CI pipeline) complete, CI green on first push
Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>